// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Link as toggle renders correctly 1`] = `
<jest>
  <a
    aria-controls="collapseExample"
    aria-expanded="false"
    class="bcl-link"
    data-bs-toggle="collapse"
    href="#collapseExample"
    role="button"
  >
    I am a link
  </a>
</jest>
`;

exports[`OE - Link danger renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-danger"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link dark renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-dark"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link disabled renders correctly 1`] = `
<jest>
  <a
    aria-disabled="true"
    class="bcl-link disabled"
    href="/example.html"
    tabindex="-1"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link info renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-info"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link light renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-light"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link primary renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-primary"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link renders correctly 1`] = `
<jest>
  <a
    class="bcl-link"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link secondary renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-secondary"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link success renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-success"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link warning renders correctly 1`] = `
<jest>
  <a
    class="bcl-link link-warning"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link with icon renders and without icon spacers correctly 1`] = `
<jest>
  <a
    class="bcl-link"
    href="/example.html"
  >
    A simple link!&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760

  
  


    <svg
      class="bi icon--s icon--rotate-90"
    >
      <use
        xlink:href="/icons.svg#mouse"
      />
    </svg>
  </a>
</jest>
`;

exports[`OE - Link with id renders correctly 1`] = `
<jest>
  <a
    class="bcl-link"
    href="/example.html"
    id="link-id"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link with tooltip renders correctly 1`] = `
<jest>
  <a
    class="bcl-link"
    data-bs-toggle="tooltip"
    href="/example.html"
    role="button"
    title="This is a tooltip"
  >
    A link with tooltip
  </a>
</jest>
`;

exports[`OE - Link with underline hover class renders correctly 1`] = `
<jest>
  <a
    class="bcl-link standalone"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;
